update slashblade 2.0.2